--- a/styles.css
+++ b/styles.css
@@ -54,3 +54,8 @@ button {
     max-width: 600px;
     text-align: left;
 }
+#coffee-bag {
+    position: absolute;
+    left: 100px;
+    bottom: 20px;
+}
