--- a/styles.css
+++ b/styles.css
@@ -59,3 +59,10 @@ button {
     left: 100px;
     bottom: 20px;
 }
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    [id="coffee-bag"] {
+      width: 200px;
+      height: 200px;
+    }
+  } 
