--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #887656;
+    background-color: #836b42;
     color: #FFFFFF;
     font-family: Arial, sans-serif;
     font-size: 16px;
