--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,7 @@ button {
     position: absolute;
     left: 100px;
     bottom: 20px;
+    z-index: -1;
 }
 @media only screen and (max-width: 768px) {
     /* For mobile phones: */
